--- a/awp style.css
+++ b/awp style.css
@@ -8,7 +8,7 @@
 body {
     font-family: Bahnschrift;
     font-size: 16px;
-    background: #5fb56a;
+    background-color: #1E254B;
     margin: 0 auto;
     padding: 0;
     color: #000;
@@ -119,7 +119,7 @@ input {
 .banner {
     text-align: center;
     font-size: 100%;
-    background-color: rgb(178, 220, 182);
+    background-color: #BD3B70;
     padding: 0px 0;
 }
 
@@ -141,7 +141,8 @@ input {
 }
 
 .searchbox {
-    border: 3.5px solid #5fb56a;
+    border: 3.5px solid #BD3B70;
+    border-radius: 10px;
     margin-bottom: 5px;
     min-height: 37px;
     min-width: 150px;
@@ -149,19 +150,21 @@ input {
 }
 
 .searchboxVar2 {
-    border: 3.5px solid #5fb56a;
+    border: 3.5px solid #BD3B70;
     margin-bottom: 5px;
     min-height: 37px;
     min-width: 50px;
     margin-top: 4px;
+    border-radius: 10px;
 }
 
 .searchboxVar {
-    border: 3.5px solid #5fb56a;
+    border: 3.5px solid #BD3B70;
     margin-bottom: 5px;
     min-height: 37px;
     min-width: 80px;
     margin-top: 4px;
+    border-radius: 10px;
 }
 
 .listOfResults {
@@ -171,7 +174,7 @@ input {
 }
 
     .listOfResults li a {
-        border: 1px solid rgb(178, 220, 182);
+        border: 1px solid #BD3B70;
         margin-top: -1px;
         background-color: white;
         padding: 12px;
@@ -201,7 +204,7 @@ margin-top: 5px;
     text-decoration: none;
     min-width: 20%;
     max-width: 50%;
-    border: 3.5px solid #5fb56a;
+    border: 3.5px solid #537EFF;
     margin: 30px 0 10px 0;
     background-color: rgb(178, 220, 182);
     padding: 10px;
@@ -218,15 +221,15 @@ margin-top: 5px;
 
 .returnbox {
     display: inline-block;
-    color: black;
+    color: white;
     text-align: center;
     text-decoration: none;
-    min-width: 20%;
-    max-width: 50%;
-    border: 3.5px solid #5fb56a;
+    min-width: 18.5%;
+    max-width: 18.5%;
     margin: 245px 0 10px 0;
-    background-color: rgb(178, 220, 182);
+    background-color: #BD3B70;
     padding: 10px;
+    border-radius: 10px;
 }
 
     .returnbox a {
@@ -235,38 +238,38 @@ margin-top: 5px;
     }
 
     .returnbox:hover {
-        background-color: white;
+        background-color: #EF4275;
     }
 
 .returnbox2 {
     display: inline-block;
-    color: black;
+    color: white;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
-    min-width: 20%;
-    max-width: 50%;
-    border: 3.5px solid #5fb56a;
+    min-width: 18.5%;
+    max-width: 18.5%;
     margin: 30px 0 10px 0;
-    background-color: rgb(178, 220, 182);
+    background-color: #BD3B70;
     padding: 10px;
+    border-radius: 10px;
 }
 
     .returnbox2:hover {
-        background-color: white;
+        background-color: #EF4275;
     }
 
 .returnbox3 {
     display: inline-block;
-    color: black;
+    color: white;
     text-align: center;
     text-decoration: none;
-    min-width: 20%;
-    max-width: 50%;
-    border: 3.5px solid #5fb56a;
+    min-width: 18.5%;
+    max-width: 18.5%;
     margin: 215px 0 10px 0;
-    background-color: rgb(178, 220, 182);
+    background-color: #BD3B70;
     padding: 10px;
+    border-radius: 10px;
 }
 
     .returnbox3 a {
@@ -275,7 +278,7 @@ margin-top: 5px;
     }
 
     .returnbox3:hover {
-        background-color: white;
+        background-color: #EF4275;
     }
 
 .boxtext {
@@ -298,7 +301,7 @@ margin-top: 5px;
 .dropdownbutton {
     font-family: Bahnschrift;
     padding: 16px;
-    background-color: rgb(178, 220, 182);
+    background-color: #BD3B70;
     color: black;
     font-size: 16px;
     border: none;
@@ -308,12 +311,12 @@ margin-top: 5px;
 }
 
     .dropdownbutton:hover {
-        background-color: #5fb56a;
+        background-color: #EF4275;
         width: 100%;
     }
 
 .banner:hover {
-    background-color: #5fb56a;
+    background-color: #537EFF;
     width: 100%;
 }
 
@@ -321,7 +324,7 @@ margin-top: 5px;
     padding-top: 5px;
     display: none;
     position: absolute;
-    background-color: rgb(178, 220, 182);
+    background-color: #82346A;
     z-index: 1;
     width: 100%;
 }
@@ -339,7 +342,7 @@ margin-top: 5px;
             color: black;
             text-decoration: none;
             display: block;
-            background-color: #5fb56a;
+            background-color: #EF4275;
         }
 
 .dropdown:hover .dropdown-content {
@@ -365,6 +368,6 @@ margin-top: 5px;
     font-size: 60%;
     text-align: right;
     padding: 10px 15px;
-    background-color: rgb(178, 220, 182);
+    background-color: #BD3B70;
 }
 
