--- a/awp style.css
+++ b/awp style.css
@@ -14,6 +14,10 @@ body {
     color: #000;
 }
 
+.roundbord {
+    border-radius: 10px;
+}
+
 .custom-h2 {
     padding-top: 5px;
     margin: 0px;
@@ -103,15 +107,15 @@ input {
 }
 
 .page {
-    max-width: 60%;
-    width: auto;
+    max-width: 555px;
+    min-width: 555px;
     margin: 0 auto;
     text-align: left;
     font-size: 100%;
 }
 
 .yläosa {
-    max-width: 100% auto;
+    width: 100%;
     margin: 0 auto;
     height: 50px;
 }
@@ -224,8 +228,8 @@ margin-top: 5px;
     color: white;
     text-align: center;
     text-decoration: none;
-    min-width: 18.5%;
-    max-width: 18.5%;
+    min-width: 195px;
+    max-width: 195px;
     margin: 245px 0 10px 0;
     background-color: #BD3B70;
     padding: 10px;
@@ -247,8 +251,8 @@ margin-top: 5px;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
-    min-width: 18.5%;
-    max-width: 18.5%;
+    min-width: 195px;
+    max-width: 195px;
     margin: 30px 0 10px 0;
     background-color: #BD3B70;
     padding: 10px;
@@ -264,8 +268,8 @@ margin-top: 5px;
     color: white;
     text-align: center;
     text-decoration: none;
-    min-width: 18.5%;
-    max-width: 18.5%;
+    min-width: 195px;
+    max-width: 195px;
     margin: 215px 0 10px 0;
     background-color: #BD3B70;
     padding: 10px;
@@ -302,7 +306,7 @@ margin-top: 5px;
     font-family: Bahnschrift;
     padding: 16px;
     background-color: #BD3B70;
-    color: black;
+    color: white;
     font-size: 16px;
     border: none;
     outline: none;
@@ -330,7 +334,7 @@ margin-top: 5px;
 }
 
     .dropdown-content a {
-        color: black;
+        color: white;
         padding: 12px 0;
         text-decoration: none;
         display: block;
@@ -339,7 +343,7 @@ margin-top: 5px;
     }
 
         .dropdown-content a:hover {
-            color: black;
+            color: white;
             text-decoration: none;
             display: block;
             background-color: #EF4275;
